refactor: update vscode  cSpell words

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,8 @@
         "scikit",
         "scipy",
         "sklearn",
-        "venv"
+        "venv",
+        "xlabel",
+        "ylabel"
     ]
 }
