feat: using the regression model on iris dataset

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "cSpell.words": [
         "ipython",
         "jupyter",
+        "logreg",
         "ndarray",
         "numpy",
         "scikit",
