feat: doing the prediction

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "logreg",
         "ndarray",
         "numpy",
+        "pairplot",
         "scikit",
         "scipy",
         "sklearn",
