--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,8 @@
         "ndarray",
         "numpy",
         "pairplot",
+        "reglin",
+        "rmse",
         "scikit",
         "scipy",
         "sklearn",
