feat: use SVM to recognize images

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,10 @@
 {
     "cSpell.words": [
+        "astype",
         "ipython",
         "jupyter",
         "logreg",
+        "mpimg",
         "ndarray",
         "numpy",
         "pairplot",
